<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".fragments.login.RegisterFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dim_16dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/app_logo"
            android:focusable="true"
            android:focusableInTouchMode="true"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/nameET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dim_8dp"
            android:background="@drawable/bg_edit_text"
            android:hint="@string/user_name"
            android:inputType="textPersonName"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            tools:ignore="LabelFor"
            android:paddingStart="10dp"
            android:paddingEnd="@dimen/dim_8dp"/>

        <EditText
            android:id="@+id/emailET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dim_8dp"
            android:background="@drawable/bg_edit_text"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            tools:ignore="LabelFor"
            android:paddingStart="10dp"
            android:paddingEnd="@dimen/dim_8dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dim_8dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/mobileET"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_edit_text"
                android:hint="@string/mobile"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="20sp"
                tools:ignore="LabelFor"
                android:paddingStart="10dp"
                android:paddingEnd="@dimen/dim_8dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/bg_edit_text"
                android:layout_marginStart="@dimen/dim_8dp">

                <Spinner
                    android:id="@+id/phoneCountry_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    tools:ignore="UnusedAttribute"
                    style="@style/Spinner"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_edit_text"
            android:paddingStart="@dimen/dim_2dp"
            android:paddingEnd="@dimen/dim_2dp"
            android:layout_marginBottom="@dimen/dim_8dp">

            <Spinner
                android:id="@+id/country_spinner"
                style="@style/Spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/white"
                tools:ignore="UnusedAttribute" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_edit_text"
            android:paddingStart="@dimen/dim_2dp"
            android:paddingEnd="@dimen/dim_2dp"
            android:layout_marginBottom="@dimen/dim_8dp">

            <Spinner
                android:id="@+id/city_spinner"
                style="@style/Spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/white"
                tools:ignore="UnusedAttribute" />

        </LinearLayout>

        <EditText
            android:id="@+id/passwordET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dim_8dp"
            android:background="@drawable/bg_edit_text"
            android:hint="@string/password"
            android:inputType="text"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            tools:ignore="LabelFor,TextFields"
            android:paddingStart="10dp"
            android:paddingEnd="@dimen/dim_8dp"/>

        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/i_agree_to_the_terms_conditions" />

        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_round_rect"
            android:text="@string/signup"
            android:textColor="@color/black" />

    </LinearLayout>
</ScrollView>